--- a/jalga.html
+++ b/jalga.html
@@ -39,7 +39,7 @@
       <h1>Холбоо барих</h1>
       <p>Утас : +97699442528</p>
       <a href="mailto:munkhpuntsag@Gmaik.com">Эмайл бичих.</a>
-      <img src="giphy.gif" alt="Minii zurag">
+      <img src="image/giphy.gif" alt="Minii zurag">
       <a href="mailto:munkhpuntsag@Gmaik.com">Эмайл бичих.</a>
     </div>
 
