--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <!--[if IE 6]>
 <link href="css/ie6.css" rel="stylesheet" type="text/css" />
 <![endif]-->
-<script type="text/javascript" src="/jquery-1.4.2.min.js" </script>
-<script type="text/javascript" src="/jquery.tipsy.js" </script>
-<script type="text/javascript" src="/cufon.yui.js" </script>
-<script type="text/javascript" src="/scrollTo.js" </script>
-<script type="text/javascript" src="/myriad.js" </script>
-<script type="text/javascript" src="/jquery.colorbox.js" </script>
-<script type="text/javascript" src="/custom.js" </script>
+<script type="text/javascript" src="Puunaa.github.io/script/jquery-1.4.2.min.js" </script>
+<script type="text/javascript" src="Puunaa.github.io/script/jquery.tipsy.js" </script>
+<script type="text/javascript" src="Puunaa.github.io/script/cufon.yui.js" </script>
+<script type="text/javascript" src="Puunaa.github.io/script/scrollTo.js" </script>
+<script type="text/javascript" src="Puunaa.github.io/script/myriad.js" </script>
+<script type="text/javascript" src="Puunaa.github.io/script/jquery.colorbox.js" </script>
+<script type="text/javascript" src="Puunaa.github.io/script/custom.js" </script>
 <script type="text/javascript">
 		Cufon.replace('h1,h2');
 </script>
